--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/nurminni/wom23-project1-malding-wsAPI#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.14.2"
   },
   "devDependencies": {
