--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "url": "^0.11.3",
     "ws": "^8.14.2"
   },
   "devDependencies": {
